--- a/index.html
+++ b/index.html
@@ -1,40 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <!-- Bootstrap Link -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <!-- jQuery Link -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- Game Logic -->
-    <script type="text/javascript" src="assets/javascript/crystalsCollector.js"></script>
-    <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Crystal Collector</title>
+  <!-- RESET -->
+  <link rel="stylesheet" href="./assets/css/reset.css" />
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
+   <!--CSS-->
+  <style>
+    body {
+        background-image: url("./assets/images/stardust.png");
+    }
+
+    .jumbotron {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#blue {
+  padding: 20px;
+}
+
+#green {
+  padding: 20px;
+}
+
+#red {
+  padding: 20px;
+}
+
+#yellow {
+  padding: 20px;
+}
+  </style>
 
 </head>
 
 <body>
-<div class="container">
-<div class="row">The Crystal Collector!</div>
-<div class="row">
-    <div class="col-6-md">
+<!-- Title & instructions -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="jumbotron">
+          <h1 class="display-4">The Crystal Collector! <i class="fas fa-hat-wizard"></i></h1>
+          <hr class="my-4">
+          <p>You will be given a random number.</p>
+          <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points
+            to
+            your total score.</p>
+          <p>You win the game by matching your total score to the random number</p>
+          <p>You have to click on the crystal to find out it's hidden value!</p>
+          <p>Each time the game starts, the values of each crystal changes.</p>
+          <h2> Click on any crystal to start collecting!</h2>
+
+          <a type="button" class="btn btn-danger" onclick="myFunction()">Start Over</a>
+        </div>
+      </div>
+    </div>
+<!-- crystals -->
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card mb-4">
+          <div class="card-header">
+            Magic Crystals
+          </div>
+          <div class="card-body">
+            <div class="card-body text-center">
+              <img src="assets/images/blue.png" id="blue">
+              <img src="assets/images/green.png" id="green">
+              <img src="assets/images/red.png" id="red">
+              <img src="assets/images/yellow.png" id="yellow">
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
-    <div class="col-6-md">
 
-    </div>
-</div>
+    <!-- row of total scores -->
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card mb-4">
+          <div class="card-header">
+            Crystal Worth
+          </div>
+          <div class="card-body">
+            <h3 class="text-center" id="target-score"></h3>
+          </div>
+        </div>
+      </div>
 
+      <!-- Your Score -->
+      <div class="col-md-6">
 
+        <div class="card mb-4">
+          <div class="card-header">
+            Your Total
+          </div>
+          <div class="card-body">
+            <h3 class="text-center" id="your-score"></h3>
+          </div>
+        </div>
+      </div>
+      </div>
 
+    <!-- Win/loss counter -->
+    <div class="row">
 
+      <!-- Win Count -->
+      <div class="col-md-6">
+        <div class="card mb-4">
+          <div class="card-header">
+            Wins
+          </div>
+          <div class="card-body">
+            <h3 class="text-center" id="win-count">0</h3>
+          </div>
+        </div>
+      </div>
 
-</div>
+      <!-- Loss Count -->
+      <div class="col-md-6">
 
+        <div class="card mb-4">
+          <div class="card-header">
+            Losses
+          </div>
+          <div class="card-body">
+            <h3 class="text-center" id="loss-count">0</h3>
+          </div>
+        </div>
+      </div>
+
+  </div>
+
+  <!-- JQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- Link to internal JS file  -->
+  <script src="./assets/javascript/game.js"></script>
 </body>
 
 </html>
